# Who_to_sue_next

./: .gitignore  RAG.ipynb  app.py  atomic_chunking.py  bm25_retriever.pkl  clean_data.json  consumer_protection_act_2019.json  cpa_anchored.json  cpa_anchored_refined.json  cpa_anchored_refined_v2.json  diagram.py  graphrag.ipynb  parent_child.py  pyproject.toml  refineact.py  requirements.txt  requirments.txt  rough  rough1  scrapconsumeract2019.py  streamlitpractice.py
